<resources>
    <string name="app_name">TopQuiz</string>
    <string name="welcome_msg">Bienvenue dans TopQuiz !</string>
    <string name="firstname_hint">Entrez votre prénom :</string>
    <string name="play_btn">Jouez !</string>
    <string name="question">Question ?</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="ranking_btn">Meilleurs scores</string>
    <string name="ranking_title">Classement</string>
    <string name="ranking_list">Il n\'y a pas encore de meilleurs scores...</string>
    <string name="rank1">Rank 1</string>
    <string name="rank2">Rank 2</string>
    <string name="rank3">Rank 3</string>
    <string name="rank4">Rank 4</string>
    <string name="rank5">Rank 5</string>
    <string name="test">test</string>

</resources>
