<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="nicolasrocchi.com.topquiz.controller.GameActivity">

    <TextView
        android:id="@+id/activity_game_question_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/question"/>
    <Button
        android:id="@+id/activity_game_answer1_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:text="@string/answer1"/>
    <Button
        android:id="@+id/activity_game_answer2_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:text="@string/answer2"/>
    <Button
        android:id="@+id/activity_game_answer3_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:text="@string/answer3"/>
    <Button
        android:id="@+id/activity_game_answer4_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:text="@string/answer4"/>
</LinearLayout>
