<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="nicolasrocchi.com.topquiz.controller.MainActivity">

    <TextView
        android:id="@+id/activity_main_greeting_txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/welcome_msg" />
    <EditText
        android:id="@+id/activity_main_name_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textColorHint="@color/colorAccent"
        android:background="@android:color/white"
        android:hint="@string/firstname_hint"/>
    <Button
        android:id="@+id/activity_main_play_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/play_btn"/>
    <Button
        android:id="@+id/activity_main_ranking_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColor="@color/colorAccent"
        android:background="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/ranking_btn"/>
</LinearLayout>
